[package]
name = "itsylinker"
version = "0.0.1"
authors = ["Chris Williams <chrisw@diosix.org>"]
description = "Minimal RV64I ELF linker"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = "1.0.118"
serde_derive = "1.0.118"