[package]
name = "itsylinker"
version = "0.0.1"
authors = ["Chris Williams <chrisw@diosix.org>"]
description = "Minimal RV64I ELF linker"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = "1.0.118"
serde_derive = "1.0.118"
goblin = "0.4.0"
wildmatch = "2.1.0"
byterider = { git = "https://github.com/diodesign/byterider.git" }