[package]
name = "itsylinker"
version = "0.0.1"
authors = ["Chris Williams <chrisw@diosix.org>"]
description = "Minimal RV64I ELF linker"
edition = "2018"

[dependencies]
toml = "0.5.8"
serde = "1.0.130"
serde_derive = "1.0.130"
object = { version = "0.27.1", features = ["write", "read"] }
wildmatch = "2.1.0"
memmap2 = "0.5.0"
byterider = { git = "https://github.com/diodesign/byterider.git" }